room control screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   validatorless: ^1.2.0
   font_awesome_flutter: ^9.1.0
+  flutter_svg: ^0.22.0
+  sleek_circular_slider: ^2.0.1
+  dotted_border: ^2.0.0
+  syncfusion_flutter_sliders: ^19.2.47
 
 dev_dependencies:
   flutter_test:
@@ -48,6 +52,7 @@ flutter:
   assets:
     - assets/roomtv.jpg
     - assets/avatar.jpg
+    - assets/air-conditioner.svg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
